Feature #86523. [Core] Jetty upgrade
Change-Id: I5c6262239172a9c1f5c0b899084e92bf02b94de6